# unige-git

./: LICENSE  README.md  es1.c  es2.c  es3.c  es4.c  my-git.sh
advanced data management/: appunti-neo4j.md  tutorato.md
virtualization and cloud computing/exam-vccamillino/: .gitignore  Makefile  README.md  Vagrantfile  debug.log.bak  inventory  playbook.yml  pyproject.toml  secrets.yml
virtualization and cloud computing/exam-vccamillino/.git.bak/: FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
virtualization and cloud computing/exam-vccamillino/.git.bak/logs/: HEAD
virtualization and cloud computing/exam-vccamillino/.git.bak/objects/pack/: pack-298747360b036f5528c3e88780ba7bfd6d18d6dd.idx  pack-298747360b036f5528c3e88780ba7bfd6d18d6dd.pack  pack-298747360b036f5528c3e88780ba7bfd6d18d6dd.rev
virtualization and cloud computing/exam-vccamillino/credentials.bak/: container-registry-http-secret  container-registry-password  dex-admin-password  dex-db-password  forgejo-db-password  forgejo-internal-token  forgejo-jwt-secret  forgejo-secret  forgejo-secret-key  grafana-admin-password  grafana-db-password  grafana-secret  postgres-password
virtualization and cloud computing/exam-vccamillino/roles/docker-registry-node-config/tasks/: main.yml
virtualization and cloud computing/exam-vccamillino/roles/docker-registry/tasks/: main.yml
virtualization and cloud computing/exam-vccamillino/scripts/: browser-test.sh  filter_tasks.sh  nfs-test.sh  password_audit.py  password_audit_allowlist.txt  smoke-test-all.sh  smoke-test-target1.sh  smoke-test-target2.sh
(+1777 files in other folders)
